Mario Frasca                                            20 Jan 2000-14 Feb 2000
Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
Riley Williams        Riley@Williams.Name               16 Nov 1998-30 May 2002
Roman Festchook       roma@polesye.net                  27 Oct 2001
Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
Simon Wood                                               6 Jan 2000-12 Jan 2000
Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001

-------------------------------------------------------------------------------

Thu May 30 23:45:40 BST 2002	Riley Williams <Riley@Williams.Name>

	* Added new header arch/asm.h with definitions specific to the
	  use of the SPLINT tool with sections of C code containing
	  the asm() function.
	* Added a document (still being written) on the Minix file
	  system and how it works.

Thu May 30 16:00:37 BST 2002	Riley Williams <Riley@Williams.Name>

	* Standardised on clr_irq() and set_irq() macros throughout
	  the source tree. clri() would have been acceptable, but
	  seti() is the Search for Extra-Terrestial Intelligence, so
	  is misleading in this context.

Thu May 30 10:57:30 BST 2002	Riley Williams <Riley@Williams.Name>

	* Completed ANSI'fication of elks/fs subtree.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop.

Thu May 30 07:22:17 BST 2002	Riley Williams <Riley@Williams.Name>

	* This is ELKS 0.1.1-pre1

	* Reverted to elks/fs/minix subdirectory from 0.1.0 kernel release.
	* Re-ANSI'fied elks/fs/minix subdirectory.
	* ANSI'fied elks/net subdirectory.
	* Verified that current codebase both compiles and boots on my
	  286 based laptop - AT LAST !!!
