@@ -25,13 +25,19 @@ Paul Nasrat           pauln@truemesh.com                29 Oct 2001-24 Apr 2002
 Per Olofsson          MagerValp@cling.gu.se             25 Feb 2000
 Peter L Vachuska      pvachusk@nconnect.net             13 Aug 2001
 Richard Wallman       murkygoth@murkygoth.uklinux.net    2 Apr 2002
-Riley Williams        Riley@Williams.Name               16 Nov 1998-30 May 2002
+Riley Williams        Riley@Williams.Name               16 Nov 1998-31 May 2002
 Roman Festchook       roma@polesye.net                  27 Oct 2001
 Simon Weijgers        simon@weijgers.com                16 Sep 1998-15 Nov 1999
 Simon Wood                                               6 Jan 2000-12 Jan 2000
 Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
+
+Fri May 31 23:28:44 BST 2002	Riley Williams <Riley@Williams.Name>
+
+	* Made selection of root device simpler and ensured nodes are
+	  synchronised with majors in include/linuxmt/major.h rather
+	  than having the numbers duplicated.
 
 Thu May 30 23:45:40 BST 2002	Riley Williams <Riley@Williams.Name>
 
